--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.10.0",
     "express": "^4.18.2",
     "path-to-regexp": "^6.2.1",
     "socket.io": "^4.8.1"
